# metadata-shortener

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust-fmt.yml  rust-test.yml
examples/: automated_short_meta.rs  automated_short_meta_unmarked_transaction.rs
for_tests/: acala2230  bifrost992  polkadot1000001_v14  rococo1006002_experimental  rococo_updated  westend1006001
src/: cut_metadata.rs  cutter.rs  error.rs  lib.rs  tests.rs  traits.rs
