[package]
description = "Reference implementation for metadata shortener for Substrate chains, RFC46"
license = "GPL-3.0-or-later"
name = "metadata-shortener"
version = "0.1.0"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/Alzymologist/metadata-shortener"
homepage = "https://github.com/Alzymologist/metadata-shortener"
documentation = "https://docs.rs/metadata-shortener/"
keywords = ["substrate", "frame-metadata"]
exclude = ["/.github", "for_tests", "examples"]

[dependencies]
blake3 = {version = "1.5.0", default-features = false, optional = true}
external-memory-tools = {version = "0.1.0", default-features = false}
frame-metadata = {version = "16.0.0", default-features = false, features = ["current", "decode"], optional = true}
merkle-cbt = {version = "0.3.2", default-features = false, optional = true}
merkle-cbt-lean = {version = "0.1.0", default-features = false, optional = true}
parity-scale-codec = {version = "3.6.9", default-features = false, features = ["derive", "bit-vec"]}
scale-info = {version = "2.10.0", default-features = false}
substrate_parser = {version = "0.5.0", default-features = false, features = ["embed-display"]}

[dev-dependencies]
blake3 = {version = "1.5.0", default-features = false}
frame-metadata = {version = "16.0.0", default-features = false, features = ["current", "decode"]}
hex = "0.4.3"
merkle-cbt = {version = "0.3.2", default-features = false}
merkle-cbt-lean = {version = "0.1.0", default-features = false, features = ["proof-gen"]}
primitive-types = "0.12.2"

[features]
default = ["std", "merkle-standard", "proof-gen"]
merkle-standard = ["blake3", "frame-metadata", "merkle-cbt"]
merkle-lean = ["blake3", "merkle-cbt-lean"]
proof-gen = ["merkle-cbt-lean/proof-gen", "merkle-lean"]
std = []

[lib]
name = "metadata_shortener"
crate-type = ["lib"]
